--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -2,8 +2,9 @@
   font-family: monospace;
   background: papayawhip;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  padding: 8px;
 
 }
 
@@ -19,6 +20,8 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
+  padding: 0;
+  gap: 8px;
 }
 
 a {
